# Ninja_Timer

./: .gitignore  AGENT_A_SUMMARY.md  LICENSE  README.md  alembic.ini  feature_roadmap.md  prototype_ui.html  pyproject.toml  spec.md
app/: __init__.py  config.py  logging_config.py  main.py
app/api/: auth.py  response_models.py  routes_auth.py  routes_courses.py  routes_hardware.py  routes_leaderboards.py  routes_ops.py  routes_queue.py  routes_runs.py  routes_settings.py  routes_status.py  routes_timer.py  routes_ws.py
app/db/: __init__.py  database.py  models.py  repositories.py  schemas.py
app/hardware/: __init__.py  arduino_protocol.py  debounce.py  hardware_models.py  m5stamp_protocol.py  serial_manager.py  simulated_transport.py  transport_base.py  wifi_manager.py
app/services/: course_service.py  event_bus.py  hardware_service.py  leaderboard_service.py  operations_service.py  queue_service.py  relay_service.py  run_service.py  settings_service.py  timer_service.py  timer_state.py
app/static/: admin.html  (+3 more)
config/: settings.yaml
data/: dynasty_ninja_timer.sqlite  dynasty_ninja_timer.sqlite-wal
docs/: V1_RELEASE_REVIEW.md
dynasty_ninja_timer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
firmware/: README.md
prototype/: dynasty_ninja_timer_ui_showcase.html
scripts/: launch_display_kiosk.ps1  register_startup_task.ps1  run_dev.ps1  run_prod.ps1
tests/: test_agent_d_apis.py  test_agent_e_live_updates.py  test_agent_h_operations.py  test_courses_api.py  test_hardware_agent.py  test_persistence.py  test_port_separation.py  test_timer_core.py
(+5 files in other folders)
